# TakOS

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  new_bash.bat  notes_FAQ.txt  run.bat
.cargo/: config
boot/: Makefile  boot.asm  long_mode_init.asm
cfg/: grub.cfg  linker.ld  x86_64-takos.json
kernel/: lib.rs
kernel/arch/: mod.rs
kernel/arch/x86_64/: idt.rs  io.rs
kernel/drivers/: io.rs  mod.rs  pic.rs  serial.rs  text_memory.rs  vga.rs
kernel/io/: mod.rs  port.rs  serial.rs
