[package]
name = "takos"
version = "0.1.0"
authors = ["Nathan Leloup <nathan.leloup.t@gmail.com"]

[lib]
path = "kernel/lib.rs"
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0.0"
volatile = "0.2.3"
spin = "0.4.9"
multiboot2 = "0.3.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"
